Features in top js file

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -35,8 +35,8 @@
     "language":"اللغة",
     "is typing":"يكتب الان",
     "Hide": "رفض",
-    "Confirm":"قبول"
-
+    "Confirm":"قبول",
+    "Users":"المستخدمين"
 
 
 }
